[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/ui/book/slot_hand.png" type="Texture" id=1]
[ext_resource path="res://assets/images/reagents/unknown_reagent.png" type="Texture" id=2]
[ext_resource path="res://game/recipe-book/ReagentDisplay.gd" type="Script" id=3]
[ext_resource path="res://game/tooltip/TooltipCollision.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="ReagentDisplay" type="TextureRect"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
unknown_texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReagentTexture" type="TextureRect" parent="MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 29.0
margin_bottom = 29.0
mouse_filter = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipCollision" parent="." instance=ExtResource( 4 )]
position = Vector2( 15, 15 )
enabled = false

[node name="CollisionShape2D" parent="TooltipCollision" index="0"]
shape = SubResource( 1 )

[node name="TooltipPosition" parent="TooltipCollision" index="1"]
position = Vector2( 22.5768, -20.431 )

[connection signal="disable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_disable_tooltip"]
[connection signal="enable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_enable_tooltip"]

[editable path="TooltipCollision"]
